Se completa entregable version 1.0.0.0

--- a/OneCoreAdmin.Web/Views/Shared/_LayoutLogin.cshtml
+++ b/OneCoreAdmin.Web/Views/Shared/_LayoutLogin.cshtml
@@ -53,6 +53,19 @@
     <!-- Start Section moment  -->
     <script src="Scripts/moment/moment.min.js" type="text/javascript"></script>
     <!-- End Section moment  -->
+
+    <!-- Start Section Recaptcha  -->
+    <!-- Include the JS ReCaptcha API -->
+    <script src="~/Scripts/recaptcha/angular-recaptcha.min.js" type="text/javascript"></script>
+    <!-- End Section Recaptcha  -->
+    <!-- Start angular-block-ui  -->
+    <script src="~/Scripts/block-ui/angular-block-ui.min.js" type="text/javascript"></script>
+    <!-- End angular-block-ui  -->
+    <!-- Start ng-sweet-alert  -->
+    <script src="~/Scripts/ngsweetalert/sweetalert2.all.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/promise-polyfill"></script>
+    <!-- End ng-sweet-alert  -->
+    
     <!-- Begin Section Main App  -->
     <script src="Scripts/app/app.js" type="text/javascript"></script>
     <script src="Scripts/app/onecoreadminApp.js" type="text/javascript"></script>
