--- a/OneCoreAdmin.Web/Views/Home/Index.cshtml
+++ b/OneCoreAdmin.Web/Views/Home/Index.cshtml
@@ -22,211 +22,45 @@
         <div class="col-sm-7 infobox-container">
             <div class="infobox infobox-green">
                 <div class="infobox-icon">
-                    <i class="ace-icon fa fa-comments"></i>
+                    <i class="ace-icon fa fa-users"></i>
                 </div>
 
                 <div class="infobox-data">
-                    <span class="infobox-data-number">32</span>
-                    <div class="infobox-content">Comentarios</div>
+                    <span class="infobox-data-number">{{activos}}</span>
+                    <div class="infobox-content">Usuario Activos</div>
                 </div>
 
-                <div class="stat stat-success">8%</div>
+                <div class="stat stat-success">{{percactivos}} %</div>
             </div>
 
             <div class="infobox infobox-blue">
                 <div class="infobox-icon">
-                    <i class="ace-icon fa fa-twitter"></i>
+                    <i class="ace-icon fa fa-users"></i>
                 </div>
 
                 <div class="infobox-data">
-                    <span class="infobox-data-number">11</span>
-                    <div class="infobox-content">Nuevos seguidores</div>
+                    <span class="infobox-data-number">{{inactivos}}</span>
+                    <div class="infobox-content">Usuarios Inactivos</div>
                 </div>
 
-                <div class="badge badge-success">
-                    +32%
-                    <i class="ace-icon fa fa-arrow-up"></i>
-                </div>
+                <div class="stat stat-important">{{percinactivos}} %</div>
             </div>
 
             <div class="infobox infobox-pink">
                 <div class="infobox-icon">
-                    <i class="ace-icon fa fa-shopping-cart"></i>
+                    <i class="ace-icon fa fa-users"></i>
                 </div>
 
                 <div class="infobox-data">
-                    <span class="infobox-data-number">8</span>
-                    <div class="infobox-content">Compras</div>
+                    <span class="infobox-data-number">{{total}}</span>
+                    <div class="infobox-content">Usuarios Totales</div>
                 </div>
-                <div class="stat stat-important">4%</div>
+
+                <div class="stat">{{perctotal}} %</div>
             </div>
 
-            <div class="infobox infobox-red">
-                <div class="infobox-icon">
-                    <i class="ace-icon fa fa-flask"></i>
-                </div>
-
-                <div class="infobox-data">
-                    <span class="infobox-data-number">7</span>
-                    <div class="infobox-content">Experimentos</div>
-                </div>
-            </div>
-
-            <div class="infobox infobox-orange2">
-                <div class="infobox-chart">
-                    <span class="sparkline" data-values="196,128,202,177,154,94,100,170,224"></span>
-                </div>
-
-                <div class="infobox-data">
-                    <span class="infobox-data-number">6,251</span>
-                    <div class="infobox-content">Páginas vistas</div>
-                </div>
-
-                <div class="badge badge-success">
-                    7.2%
-                    <i class="ace-icon fa fa-arrow-up"></i>
-                </div>
-            </div>
-
-            <div class="infobox infobox-blue2">
-                <div class="infobox-progress">
-                    <div class="easy-pie-chart percentage" data-percent="42" data-size="46">
-                        <span class="percent">42</span>%
-                    </div>
-                </div>
-
-                <div class="infobox-data">
-                    <span class="infobox-text">tráfico usado</span>
-
-                    <div class="infobox-content">
-                        <span class="bigger-110">~</span>
-                        58 GB restante
-                    </div>
-                </div>
-            </div>
-
-            <div class="space-6"></div>
-
-            <div class="infobox infobox-green infobox-small infobox-dark">
-                <div class="infobox-progress">
-                    <div class="easy-pie-chart percentage" data-percent="61" data-size="39">
-                        <span class="percent">61</span>%
-                    </div>
-                </div>
-
-                <div class="infobox-data">
-                    <div class="infobox-content">Tareas</div>
-                    <div class="infobox-content">Terminadas</div>
-                </div>
-            </div>
-
-            <div class="infobox infobox-blue infobox-small infobox-dark">
-                <div class="infobox-chart">
-                    <span class="sparkline" data-values="3,4,2,3,4,4,2,2"></span>
-                </div>
-
-                <div class="infobox-data">
-                    <div class="infobox-content">Ganancias</div>
-                    <div class="infobox-content">$32,000</div>
-                </div>
-            </div>
-
-            <div class="infobox infobox-grey infobox-small infobox-dark">
-                <div class="infobox-icon">
-                    <i class="ace-icon fa fa-download"></i>
-                </div>
-
-                <div class="infobox-data">
-                    <div class="infobox-content">Descargas</div>
-                    <div class="infobox-content">1,205</div>
-                </div>
-            </div>
         </div>
 
-        <div class="vspace-12-sm"></div>
-
-        <div class="col-sm-5">
-            <div class="widget-box">
-                <div class="widget-header widget-header-flat widget-header-small">
-                    <h5 class="widget-title">
-                        <i class="ace-icon fa fa-signal"></i>
-                        Redes Sociales
-                    </h5>
-
-                    <div class="widget-toolbar no-border">
-                        <div class="inline dropdown-hover">
-                            <button class="btn btn-minier btn-primary">
-                                Esta semana
-                                <i class="ace-icon fa fa-angle-down icon-on-right bigger-110"></i>
-                            </button>
-
-                            <ul class="dropdown-menu dropdown-menu-right dropdown-125 dropdown-lighter dropdown-close dropdown-caret">
-                                <li class="active">
-                                    <a href="" class="blue">
-                                        <i class="ace-icon fa fa-caret-right bigger-110">&nbsp;</i>
-                                        Esta semana
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="">
-                                        <i class="ace-icon fa fa-caret-right bigger-110 invisible">&nbsp;</i>
-                                        La semana pasada
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="">
-                                        <i class="ace-icon fa fa-caret-right bigger-110 invisible">&nbsp;</i>
-                                        Este mes
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="">
-                                        <i class="ace-icon fa fa-caret-right bigger-110 invisible">&nbsp;</i>
-                                        El mes pasado
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="widget-body">
-                    <div class="widget-main">
-                        <div id="piechart-placeholder"></div>
-
-                        <div class="hr hr8 hr-double"></div>
-
-                        <div class="clearfix">
-                            <div class="grid3">
-                                <span class="grey">
-                                    <i class="ace-icon fa fa-facebook-square fa-2x blue"></i>
-                                    &nbsp; likes
-                                </span>
-                                <h4 class="bigger pull-right">1,255</h4>
-                            </div>
-
-                            <div class="grid3">
-                                <span class="grey">
-                                    <i class="ace-icon fa fa-twitter-square fa-2x purple"></i>
-                                    &nbsp; tweets
-                                </span>
-                                <h4 class="bigger pull-right">941</h4>
-                            </div>
-
-                            <div class="grid3">
-                                <span class="grey">
-                                    <i class="ace-icon fa fa-pinterest-square fa-2x red"></i>
-                                    &nbsp; pins
-                                </span>
-                                <h4 class="bigger pull-right">1,050</h4>
-                            </div>
-                        </div>
-                    </div><!-- /.widget-main -->
-                </div><!-- /.widget-body -->
-            </div><!-- /.widget-box -->
-        </div><!-- /.col -->
+       
     </div><!-- /.row -->
 </div>
