--- a/OneCoreAdmin.Web/Views/Login/Index.cshtml
+++ b/OneCoreAdmin.Web/Views/Login/Index.cshtml
@@ -34,8 +34,8 @@
                     <fieldset>
                         <label class="block clearfix">
                             <span class="block input-icon input-icon-right">
-                                <input type="text" class="form-control" placeholder="usuario" id="correo" ng-model="LoginModel.correo" maxlength="50" autofocus required />
-                                <i class="ace-icon fa fa-envelope"></i>
+                                <input type="text" class="form-control" placeholder="usuario" id="usuario" name="usuario" ng-model="LoginModel.usuario" maxlength="50" autofocus required />
+                                <i class="ace-icon fa fa-user"></i>
                             </span>
                         </label>
 
@@ -60,15 +60,7 @@
                 </form>
             </div><!-- /.widget-main -->
 
-            <div class="toolbar clearfix">
-                <div>
-                    <a href="#" data-target="#forgot-box" class="forgot-password-link">
-                        <i class="ace-icon fa fa-arrow-left"></i>
-                        Recuperar mi contraseña
-                    </a>
-                </div>
-
-            </div>
+           
         </div><!-- /.widget-body -->
     </div><!-- /.login-box -->
 
