--- a/OneCoreAdmin.Web/Views/Shared/_Layout.cshtml
+++ b/OneCoreAdmin.Web/Views/Shared/_Layout.cshtml
@@ -39,6 +39,8 @@
     <link rel="stylesheet" href="assets/css/bootstrap-datetimepicker.min.css" />
     <link rel="stylesheet" href="assets/css/bootstrap-colorpicker.min.css" />
     <link rel="stylesheet" href="assets/css/chosen.min.css" />
+    <link rel="stylesheet" href="~/assets/css/responsive.dataTables.min.css" />
+
 
     <!-- ace settings handler -->
     <script src="assets/js/ace-extra.min.js"></script>
@@ -100,6 +102,8 @@
     <script src="assets/js/buttons.print.min.js"></script>
     <script src="assets/js/buttons.colVis.min.js"></script>
     <script src="assets/js/dataTables.select.min.js"></script>
+    <script src="~/assets/js/dataTables.responsive.min.js"></script>
+
     <!-- end dataTables -->
     <!-- Start Section Angular  -->
     <script src="Scripts/angular/angular.min.js"></script>
@@ -123,17 +127,28 @@
     <script src="Scripts/moment/moment.min.js" type="text/javascript"></script>
     <script src="Scripts/moment/moment-with-locales.min.js" type="text/javascript"></script>
     <!-- End Section moment  -->
+    <!-- Start Section Recaptcha  -->
+    <!-- Include the JS ReCaptcha API -->
+    <script src="~/Scripts/recaptcha/angular-recaptcha.min.js" type="text/javascript"></script>
+    <!-- End Section Recaptcha  -->
+    <!-- Start angular-block-ui  -->
+    <script src="~/Scripts/block-ui/angular-block-ui.min.js" type="text/javascript"></script>
+    <!-- End angular-block-ui  -->
+    <!-- Start ng-sweet-alert  -->
+    <script src="~/Scripts/ngsweetalert/sweetalert2.all.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/promise-polyfill"></script>
+    <!-- End ng-sweet-alert  -->
     <!-- Begin Section Main App  -->
     <script src="Scripts/app/app.js" type="text/javascript"></script>
     <script src="Scripts/app/onecoreadminApp.js" type="text/javascript"></script>
     <!-- End Section Main App  -->
     <!-- Start Section Factories  -->
     <script src="Scripts/app/factories/securityFactory.js" type="text/javascript"></script>
-    <script src="Scripts/app/factories/operationsFactory.js" type="text/javascript"></script>
     <!-- End Section Factories  -->
     <!-- Start Section Controllers  -->
     <script src="Scripts/app/controllers/indexController.js" type="text/javascript"></script>
-    <script src="Scripts/app/controllers/bancosController.js" type="text/javascript"></script>
+    <script src="~/Scripts/app/controllers/usuariosController.js" type="text/javascript"></script>
+
     <!-- End Section Controllers  -->
     @*<script type="text/javascript">
              var history_api = typeof history.pushState !== 'undefined';
@@ -167,75 +182,6 @@
             <div class="navbar-buttons navbar-header pull-right" role="navigation">
                 <ul class="nav ace-nav">
 
-                    <li class="red dropdown-modal">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <i class="ace-icon fa fa-bell icon-animated-bell"></i>
-                            <span class="badge badge-important">8</span>
-                        </a>
-
-                        <ul class="dropdown-menu-right dropdown-navbar navbar-pink dropdown-menu dropdown-caret dropdown-close">
-                            <li class="dropdown-header">
-                                <i class="ace-icon fa fa-exclamation-triangle"></i>
-                                8 Notificaciones
-                            </li>
-
-                            <li class="dropdown-content">
-                                <ul class="dropdown-menu dropdown-navbar navbar-pink">
-                                    <li>
-                                        <a href="">
-                                            <div class="clearfix">
-                                                <span class="pull-left">
-                                                    <i class="btn btn-xs no-hover btn-pink fa fa-comment"></i>
-                                                    Avisos
-                                                </span>
-                                                <span class="pull-right badge badge-info">+12</span>
-                                            </div>
-                                        </a>
-                                    </li>
-
-                                    <li>
-                                        <a href="">
-                                            <i class="btn btn-xs btn-primary fa fa-user"></i>
-                                            Usuarios
-                                            <span class="pull-right badge badge-info">+1</span>
-                                        </a>
-                                    </li>
-
-                                    <li>
-                                        <a href="">
-                                            <div class="clearfix">
-                                                <span class="pull-left">
-                                                    <i class="btn btn-xs no-hover btn-success fa fa-shopping-cart"></i>
-                                                    Compras
-                                                </span>
-                                                <span class="pull-right badge badge-success">+8</span>
-                                            </div>
-                                        </a>
-                                    </li>
-
-                                    <li>
-                                        <a href="">
-                                            <div class="clearfix">
-                                                <span class="pull-left">
-                                                    <i class="btn btn-xs no-hover btn-info fa fa-twitter"></i>
-                                                    Seguidores
-                                                </span>
-                                                <span class="pull-right badge badge-info">+11</span>
-                                            </div>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-
-                            <li class="dropdown-footer">
-                                <a href="">
-                                    Ver todo
-                                    <i class="ace-icon fa fa-arrow-right"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-
                     <li class="light-blue dropdown-modal">
                         <a data-toggle="dropdown" href="#" class="dropdown-toggle">
                             <img class="nav-user-photo" src="~/assets/images/avatars/avatar.png" alt="foto" />
@@ -251,7 +197,7 @@
                             <li class="divider"></li>
 
                             <li>
-                                <a href="/home/login">
+                                <a href="/login">
                                     <i class="ace-icon fa fa-power-off"></i>
                                     Salir
                                 </a>
@@ -273,35 +219,6 @@
                 try { ace.settings.loadState('sidebar') } catch (e) { }
             </script>
 
-            <div class="sidebar-shortcuts" id="sidebar-shortcuts">
-                <div class="sidebar-shortcuts-large" id="sidebar-shortcuts-large">
-                    <button class="btn btn-success">
-                        <i class="ace-icon fa fa-signal"></i>
-                    </button>
-
-                    <button class="btn btn-info">
-                        <i class="ace-icon fa fa-pencil"></i>
-                    </button>
-
-                    <button class="btn btn-warning">
-                        <i class="ace-icon fa fa-users"></i>
-                    </button>
-
-                    <button class="btn btn-danger">
-                        <i class="ace-icon fa fa-cogs"></i>
-                    </button>
-                </div>
-
-                <div class="sidebar-shortcuts-mini" id="sidebar-shortcuts-mini">
-                    <span class="btn btn-success"></span>
-
-                    <span class="btn btn-info"></span>
-
-                    <span class="btn btn-warning"></span>
-
-                    <span class="btn btn-danger"></span>
-                </div>
-            </div><!-- /.sidebar-shortcuts -->
 
             <ul class="nav nav-list">
 
